@@ -4,18 +4,25 @@
 ## Author:      Mattia Barbon
 ## Modified by:
 ## Created:     13/12/2001
-## RCS-ID:      $Id: GridCellEditor.xs,v 1.12 2006/11/21 21:00:27 mbarbon Exp $
-## Copyright:   (c) 2001-2006 Mattia Barbon
+## RCS-ID:      $Id: GridCellEditor.xs,v 1.13 2007/03/27 19:33:33 mbarbon Exp $
+## Copyright:   (c) 2001-2007 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
 #############################################################################
 
 MODULE=Wx PACKAGE=Wx::GridCellEditor
 
-## // thread KO
+static void
+wxGridCellEditor::CLONE()
+  CODE:
+    wxPli_thread_sv_clone( aTHX_ CLASS, (wxPliCloneSV)wxPli_detach_object );
+
+## // thread OK
 void
 wxGridCellEditor::DESTROY()
   CODE:
+    wxPli_thread_sv_unregister( aTHX_ wxPli_get_class( aTHX_ ST(0) ),
+                                SvRV( ST(0) ), ST(0) );
     if( THIS )
         THIS->DecRef();
 
