@@ -1,6 +1,7 @@
 Revision history for Perl extension Wx.
 
 0.71
+	- Fix all remaining known thread issues.
 
 0.70  Thu Mar 22 00:08:20 CET 2007
 	- wxWidgets 2.9.x compatibility.
